syntax = "proto3";

package pb;

option go_package = "github.com/wpcodevo/golang-mongodb/pb";
import "google/protobuf/timestamp.proto";

message Post {
  string Id = 1;
  string Title = 2;
  string Content = 3;
  string Image = 4;
  string User = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message PostResponse { Post post = 1; }
